passed details from db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="name">name</string>
     <string name="weight">weight</string>
     <string name="create_dog_profile">CREATE DOG PROFILE</string>
+    <string name="profile_menu">Profile</string>
+    <string name="book_menu">Book</string>
 </resources>
