--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="create_dog_profile">CREATE DOG PROFILE</string>
     <string name="profile_menu">Profile</string>
     <string name="book_menu">Book</string>
+    <string name="next_step">Next step</string>
 </resources>
