solved some errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="vaccinationtitle">VACCINATIONS</string>
     <string name="profile_menu">Profile</string>
     <string name="book_menu">Book</string>
-    <string name="next_step">Next step</string>
+    <string name="next_step">Register</string>
     <string name="health">Health</string>
     <string name="choose_a_photo">Choose a Photo</string>
     <string name="photo_title">Photo Title</string>
