--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="bttn_login">Login</string>
     <string name="bttn_register">Register</string>
     <string name="bttn_looking_for_a_vet">Looking for a vet?</string>
-    <string name="bttn_looking_for_a_new_dog">Rate the dogs</string>
+    <string name="bttn_looking_for_a_new_dog">Woopedia</string>
     <string name="loginView">LOGIN</string>
     <string name="registerView">REGISTER</string>
     <string name="e_mail_address_ET">e-mail address</string>
@@ -59,6 +59,8 @@
     <string name="phone_vetri">Phone</string>
     <string name="address_veterinarian">Address</string>
     <string name="veterinarian_name">Vet Name</string>
+    <string name="logout">Logout</string>
+    <string name="add_dog_menu">ADD DOG</string>
 
 
 </resources>
